# multiagentresearchsystem

./: .env.example  .gitignore  README.md  pyproject.toml
src/multiagentresearchsystem/: __init__.py  main.py  research_system.py  state_schema.py  structlogger.py  test_setup.py
src/multiagentresearchsystem/agents/: analyst.py  quality_checker.py  report_writer.py  search_agent.py  supervisor.py
