[project]
name = "multiagentresearchsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Piotr", email = "pichrusciel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.3",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
]

[project.scripts]
#multiagentresearchsystem = "multiagentresearchsystem:main"
multiagentresearchsystem = "multiagentresearchsystem.main:run_app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
